Add tags from the Holiday category to the Themes page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -131,6 +131,7 @@ en:
     themes:
       title: "ALTopedia - Activity themes"
       header: "Activity themes"
+      holidays: "Holidays"
   activities:
     page_titles:
       new_activity: "New Activity"
