Add a new Contributors page to showcase the top contributors

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -132,6 +132,9 @@ en:
       title: "ALTopedia - Activity themes"
       header: "Activity themes"
       holidays: "Holidays"
+    contributors:
+      title: "ALTopedia - Contributors"
+      header: "Top contributors"
   activities:
     page_titles:
       new_activity: "New Activity"
