--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,7 +31,7 @@ en:
     external-links: "Elsewhere"
     altto: "ALT Training Online"
     resources: "Resources"
-    job-listings: "Jobs"
+    job-listings: "Job Listings"
     shoutbox: "Shoutbox"
     themes: "Themes"
   login:
@@ -118,16 +118,18 @@ en:
     contribute:
       title: "ALTopedia - How to contribute"
       page-header: "Contribute to ALTopedia"
-      contribution-explanation: "Do you want to help the site? There are several ways you can contribute and make it a more valuable resource:"
+      contribution-explanation: "Do you want to help the site? There are several ways you can contribute and make it better:"
       submit-activity-link-heading: "Post a new activity"
       submit-activity-explanation: "The best way you can help is to add your own activity! Your ideas will benefit other teachers. You'll need to sign up for the site, but registration is free and easy. You can revise or remove your activity later if you want."
       translation-heading: "Help translate the site"
-      translation-explanation: "Do you speak any other languages and feel confident translating into them? The site's interface text can be translated into different languages. This is done through an external site called LocaleData. You'll have to register an account over there and then e-mail Jake so he can add you to the translation project. For the time being, this is just for the site's interface - things like tags and activities will require more technical work, but keep on eye on this in the future!"
+      translation-explanation: "Do you speak any other languages and feel confident translating into them? The site's interface text can be translated into different languages. Download the file from the link above and you can translate it directly. Then you can e-mail it to Jake and users will be able to see the site in the new language."
       textbook-info-heading: "Contribute textbook information"
-      textbook-info-explanation: "One function of the site is to show listings for different textbooks and show the grammar points associated with them. Right now we only have access to the New Crown textbooks. If your schools are using something different, we could update its listings if you can send us a screenshot of any sort of index page or grammar listing."
+      textbook-info-explanation: "One function of the site is to show listings for different textbooks and show the grammar points associated with them. Some of them are hard for us to get our hands on. If your schools are using a textbook that isn't listed, please send us a screenshot of any sort of index page or grammar listing."
+      grammar-heading: "Add or clarify grammar points"
+      grammar-explanation: "Do you have a background in linguistic study or an advanced command of English grammar? Some of the tags for grammar points may be inaccurate, and we're still missing a lot of essential pieces of English grammar. Please leave a comment or send an e-mail if you have any corrections or additions!"
       coding-heading: "Help code the site"
       coding-explanation: "Do you have any experience with web development? How about Ruby on Rails? The site is open-source, so if you've worked with Rails before, you can help us add new features!"
-      contact-text: "If you have any questions, please get in contact with Jake at jake.alt.dev (at) gmail.com"
+      contact-text: "If you have any other questions, please get in contact with Jake at jake.alt.dev (at) gmail.com"
     themes:
       title: "ALTopedia - Activity themes"
       header: "Activity themes"
