Update navbar and tag show view

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,7 +14,7 @@ en:
     contribute: "Contribute"
     view_all_activities: "View all"
     tag_list: "Tags"
-    textbook_listing: "Textbooks"
+    textbook_listing: "Textbook Listings"
     about: "About"
     school-levels: "School levels:"
     pre-k: "Pre-K"
