--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -138,6 +138,10 @@ en:
     contributors:
       title: "ALTopedia - Contributors"
       header: "Top contributors"
+    resources:
+      title: "ALTopedia - Resources"
+      page-header: "Useful resources"
+      page-explanation: "There are a lot of useful sites out there to help you with your lessons. Check these out!"
   activities:
     page_titles:
       new_activity: "New Activity"
