--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -224,8 +224,8 @@ en:
     sign-up-heading: Make a new account
     sign-up-info-1: Make an account at ALTopedia to post activities, vote on them, and leave comments!
     sign-up-info-2: Registration is completely free! You can choose to delete your account later if you want.
-    sign-up-info-3: The site uses e-mail for account verification and password resets, so you'll need to provide a valid e-mail address.
-    sign-up-info-4: Choose whatever you like for your username, but please make sure it's appropriate for the site.
+    sign-up-info-3: The site will send you an e-mail to verify your account. Please check your inbox and click the link!
+    sign-up-info-4: E-mail addresses are only used for verification and password resets. ALTopedia won't tell your e-mail address to anyone else.
     sign-up-button: Sign up
   front_page_posts:
     index:
