Various text updates on views

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,7 +30,7 @@ en:
     acknowledgements: "Acknowledgements"
     external-links: "Elsewhere"
     altto: "ALT Training Online"
-    resources: "Resources"
+    resources: "Useful links and resources"
     job-listings: "Job Listings"
     shoutbox: "Shoutbox"
     themes: "Activity Themes"
@@ -125,11 +125,11 @@ en:
       translation-heading: "Help translate the site"
       translation-explanation: "Do you speak any other languages and feel confident translating into them? The site's interface text can be translated into different languages. Download the file from the link above and you can translate it directly. Then you can e-mail it to Jake and users will be able to see the site in the new language."
       textbook-info-heading: "Contribute textbook information"
-      textbook-info-explanation: "One function of the site is to show listings for different textbooks and show the grammar points associated with them. Some of them are hard for us to get our hands on. If your schools are using a textbook that isn't listed, please send us a screenshot of any sort of index page or grammar listing."
+      textbook-info-explanation: "One function of the site is to show listings for different textbooks and show the grammar points associated with them. Unfortunately, schools only tend to have one or two textbooks on hand at any given time. If your schools are using a textbook that isn't listed, please send a screenshot of any sort of index page or grammar listing."
       grammar-heading: "Add or clarify grammar points"
-      grammar-explanation: "Do you have a background in linguistic study or an advanced command of English grammar? Some of the tags for grammar points may be inaccurate, and we're still missing a lot of essential pieces of English grammar. Please leave a comment or send an e-mail if you have any corrections or additions!"
-      coding-heading: "Help code the site"
-      coding-explanation: "Do you have any experience with web development? How about Ruby on Rails? The site is open-source, so if you've worked with Rails before, you can help us add new features!"
+      grammar-explanation: "Do you have a background in linguistic study or an advanced command of English grammar? Some of the tags for grammar points may be inaccurate, and the site is still missing a lot of essential pieces of English grammar. Please leave a comment or send an e-mail if you have any corrections or additions!"
+      comment-heading: "Leave a comment or thumbs-up"
+      comment-explanation: "For a lot of users, it would make their day if you wrote a nice comment after you used their activity in class. Sign up, say thanks, and make someone smile!"
       contact-text: "If you have any other questions, please get in contact with Jake at jake.alt.dev (at) gmail.com"
     themes:
       title: "ALTopedia - Activity themes"
