Update the Resources page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,7 +30,7 @@ en:
     acknowledgements: "Acknowledgements"
     external-links: "Elsewhere"
     altto: "ALT Training Online"
-    resources: "Useful links and resources"
+    resources: "Useful Links and Resources"
     job-listings: "Job Listings"
     shoutbox: "Shoutbox"
     themes: "Activity Themes"
@@ -139,9 +139,9 @@ en:
       title: "ALTopedia - Contributors"
       header: "Top contributors"
     resources:
-      title: "ALTopedia - Resources"
-      page-header: "Useful resources"
-      page-explanation: "There are a lot of useful sites out there to help you with your lessons. Check these out!"
+      title: "ALTopedia - Useful Links and Resources"
+      page-header: "Useful Links and Resources"
+      page-explanation: "There are a bunch of handy sites out there with materials that you can use in your classes. Please contact the site if any of these links break!"
   activities:
     page_titles:
       new_activity: "New Activity"
