Various view updates

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -118,7 +118,10 @@ en:
       page-header: "Contribute to ALTopedia"
       contribution-explanation: "Do you want to help the site? There are several ways you can contribute and make it better:"
       submit-activity-link-heading: "Post a new activity"
-      submit-activity-explanation: "The best way you can help is to add your own activity! Your ideas will benefit other teachers. You'll need to sign up for the site, but registration is free and easy. You can revise or remove your activity later if you want."
+      submit-activity-explanation: "One of the bests way you can help is to add your own activity! Your ideas will benefit other teachers. You'll need to sign up for the site, but registration is free and easy. You can revise or remove your activity later if you want."
+      patreon-link-heading: "Donate money to help with server costs (Patreon)"
+      patreon-explanation: "The site hosting is paid for solely through user contributions. There are no ads or sponsorships. Soon, there will be donor-only Patreon perks!"
+      ko-fi-explanation: "You can also make one-off contributions through Ko-fi!"
       translation-heading: "Help translate the site"
       translation-explanation: "Do you speak any other languages and feel confident translating into them? The site's interface text can be translated into different languages. Download the file from the link above and you can translate it directly. Then you can e-mail it to Jake and users will be able to see the site in the new language."
       textbook-info-heading: "Contribute textbook information"
