Fix a bug in the header

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,7 +32,7 @@ en:
     shoutbox: "Shoutbox"
     themes: "Activity Themes"
     special-needs: "Special Needs"
-    online-teaching: "Online teaching"
+    online-teaching: "Online Teaching"
   login:
     log_in: "Sign in"
     remember_me: "Remember me"
