--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -153,7 +153,7 @@ en:
       page-explanation: "There are a bunch of handy sites out there with materials that you can use in your classes. Please contact the site if any of these links break!"
   activities:
     page_titles:
-      new_activity: "New Activity"
+      new_activity: "ALTopedia - Submit a new activity"
     activity_form:
       guidelines:
         guideline-heading: "Thank you for sharing your activity! Here are some guidelines to keep in mind:"
