Add some new fields to Users

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -49,18 +49,22 @@ en:
       home-country: "Home country:"
       location: "Location:"
       bio: "Bio:"
+      teaching-history: "Teaching experience:"
+      offsite-link: "Web site/profile:"
       upvotes: "Favorite activities:"
       edit: "Edit profile"
       activity-list: "This user's activities:"
     edit:
-      title: "Edit user"
+      title: "ALTopedia - Edit profile"
       heading: "Edit your profile"
-      profile-instructions: "Feel free to add information to your profile! All fields are optional."
+      profile-instructions: "This is your profile, so feel free to edit it! All information is optional."
       username: "Username"
       email: "E-mail address"
       home-country: "Home country"
       location: "Location"
-      bio: "User bio"
+      teaching-history: "Teaching history (school levels, locations, etc)"
+      bio: "Your bio (teaching philosophy, goals, hobbies, etc)"
+      offsite-link: "Personal link (web site, Youtube channel, Instagram, etc)"
     index:
       title: "ALTopedia - Contributors"
       top-contributors: "Top contributors"
