--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,6 +33,7 @@ en:
     themes: "Activity Themes"
     special-needs: "Special Needs"
     online-teaching: "Online Teaching"
+    support: "Support the site"
   login:
     log_in: "Sign in to ALTopedia"
     remember_me: "Remember me"
@@ -159,6 +160,9 @@ en:
       title: "ALTopedia - Useful Links and Resources"
       page-header: "Useful Links and Resources"
       page-explanation: "There are a bunch of handy sites out there with materials that you can use in your classes. Please contact the site if any of these links break!"
+    support:
+      title: "ALTopedia - Supporting the site"
+      heading: "How you can support ALTopedia"
   activities:
     page_titles:
       new_activity: "ALTopedia - Submit a new activity"
