--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -91,6 +91,9 @@ en:
       linked-activities-heading: "Linked Activities"
       create-link-explanation: "Does one of your activities specifically focus on this page or unit? Link it here:"
       submit: "Link"
+  textbook_page_links:
+    index:
+      title: "ALTopedia - Activities for specific textbooks"
   site_pages:
     home:
       site-tagline: "Find activities, games, and worksheets for your English classes. Share your ideas and help your fellow teachers make their classes awesome!"
